Fixed horizontal overflow

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -78,6 +78,9 @@ nav {
 	.inner {
 		width: 100%;
 		margin: auto;
+		div {
+			width: 100%;
+		}
 	}
 
 	.inner > div {
